[package]
name = "http_fm"
version = "0.1.0"
authors = ["Michael Wilson <wilsoniya@gmail.com>"]

[dependencies]
chrono = "0.3"
clap = "2.20.5"
rand = "0.3.15"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rusqlite = "0.10.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]

[dev-dependencies]
mktemp = "0.3.1"

[[bin]]
name = "hfm"
path = "src/hfm.rs"

[[bin]]
name = "hfmd"
path = "src/main.rs"
