[package]
name = "http_fm"
version = "0.1.0"
authors = ["Michael Wilson <wilsoniya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
async-std = "1.5.0"
futures = "0.3.4"
serde = "1.0.105"
serde_json = "1.0.50"
tokio = "0.2.13"

[[bin]]
name = "server"
